subida de index2

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de subida a Vercel</title>
+
+    <style>
+        nav{
+            margin :10px;
+            border-radius: 10px;
+            background-color: rgb(84, 84, 100);
+            color:aliceblue;
+            font-family: arial;
+        }
+
+        nav ul li{
+            list-style: none;
+            display: inline-block;
+            padding:0 20px;
+        }
+    </style>
 </head>
 <body>
-    Vercel
+    <nav>
+        <ul>
+            <li>Inicio</li>
+            <li>Discos</li>
+            <li>Historia</li>
+            <li>Concierto</li>
+            <li>Merch</li>
+        </ul>
+    </nav>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente. Unde nostrum quaerat ea delectus sequi mollitia commodi cumque porro, voluptates maxime, fugiat ipsam iure placeat. Sed iste quas nam.
+    </div>
 </body>
 </html>
