--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
             font-family: arial;
         }
 
-        nav ul li{
-            list-style: none;
-            display: inline-block;
-            padding:0 20px;
+        nav ul li{ 
+            margin: 10px;
+            padding: 1px 0;
+            box-shadow: 0 4px 4px -3px #3c3c3eab;
+            border-radius: 9px;
+            background: linear-gradient(178deg, #64656f, #361968);
+            color: aliceblue;
+            font-family: arial;
+            transition: .5s all;
+        }
+
+        nav ul li:hover{ 
+            cursor: pointer;
+            background: radial-gradient(#ffffff59, transparent);
         }
     </style>
 </head>
