poniendo buena la pagina

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             color: aliceblue;
             font-family: arial;
             transition: .5s all;
+            display: inline-block;
+            list-style: none;
         }
 
         nav ul li:hover{ 
