--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         nav ul li{ 
             margin: 10px;
-            padding: 1px 0;
-            box-shadow: 0 4px 4px -3px #3c3c3eab;
+            padding: 5px 10px; 
+
             border-radius: 9px;
             color: aliceblue;
             font-family: arial;
