solventando pequeños fallos de css

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         nav ul li{ 
             margin: 10px;
-            padding: 5px 10px; 
-
+            padding: 5px 10px;  
             border-radius: 9px;
             color: aliceblue;
+            font-weight: bold;
             font-family: arial;
             transition: .5s all;
             display: inline-block;
