solventando pequeños fallos de css BG trans

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             transition: .5s all;
             display: inline-block;
             list-style: none;
+            background: radial-gradient(transparent, transparent);;
         }
 
         nav ul li:hover{ 
