en index quito elem inicial

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <li class="click" style="color:#ff0">Click aquí</li>
             </ul>
         </nav>
-        <div>
+        <!-- <div>
             <div class="portal">
                 <b>ES UN ELEMENTO QUE ES LA MITAD</b>
                 <p>
@@ -108,7 +108,7 @@
                     voluptatum voluptatem tenetur?
                 </p>
             </div>
-        </div>
+        </div>--> 
 
         <img src="https://live.staticflickr.com/65535/49814635382_957b3cda24_b.jpg" alt="" class="im-round">
 
