--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             background: linear-gradient(178deg, #64656f, #361968);
             color: aliceblue;
             box-shadow: var(--es-shadow);
+
+
+            position: sticky;
+            top: 10px;
+            z-index: 9999;
         }
 
         nav ul li {
@@ -108,7 +113,7 @@
                     voluptatum voluptatem tenetur?
                 </p>
             </div>
-        </div>--> 
+        </div>-->
 
         <img src="https://live.staticflickr.com/65535/49814635382_957b3cda24_b.jpg" alt="" class="im-round">
 
