--- a/eh6.html
+++ b/eh6.html
@@ -102,7 +102,7 @@ input:hover{
     box-shadow: 0 0 10px -2px #ec4a17;
 }
 
-input:active{
+input:focus{
     box-shadow: 0 0 10px 0px #ec4a17;
 }
     </style>
