--- a/ejercicioCss/index.html
+++ b/ejercicioCss/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ejercicios de Herencia en CSS</title>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="ejercicios.css">
+<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="./ejercicios.css">
 </head>
 <body>
 <header>
